--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,15 @@
     </dependencies>
   </dependencyManagement>
   <dependencies>
+
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-hibernate-orm</artifactId>
+      <artifactId>quarkus-undertow-websockets</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-rest-data-panache</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -133,7 +139,6 @@
     </plugins>
   </build>
   <profiles>
-
     <profile>
       <id>native</id>
       <activation>
