--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ quarkus.datasource.password=123456Zz..*
 quarkus.datasource.jdbc.driver=com.mysql.cj.jdbc.MysqlXADataSource
 quarkus.hibernate-orm.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
-quarkus.hibernate-orm.database.generation = drop-and-create
 quarkus.hibernate-orm.packages=com.dj.fin.entity
+quarkus.hibernate-orm.physical-naming-strategy=com.dj.fin.config.FinPhysicalNamingStrategy
+quarkus.hibernate-orm.database.generation = update
 
 
 quarkus.jackson.fail-on-unknown-properties=true
