--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "IotPack",
-  "description": "IotPack",
+  "name": "fin",
+  "description": "fin",
   "version": "0.0.1",
+  "license":"GPL",
+  "repository":"git@github.com:Crtrpt/fin.git"
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
@@ -20,7 +22,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "sapper": "^0.27.0",
-    "svelte": "^3.0.0",
+    "svelte": "^3.35.0",
     "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.0.0",
